--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node app/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/fcataniae/simple-node-rest#readme",
   "dependencies": {
+    "amqplib": "^0.5.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.0",
