add form view for files and logic to submit file to rabbit add multer dependency add folder to gitignore

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.0",
-    "httpdispatcher": "^2.1.2"
+    "httpdispatcher": "^2.1.2",
+    "multer": "^1.4.1"
   }
 }
